# irating-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: example.rs
src/: lib.rs
src/snapshots/: irating__tests__it_works.snap
